# elude

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rustfmt.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
benches/: experiment.rs  legacy.rs  multex.rs
elude_core/: Cargo.toml
elude_core/benches/: comparison.rs  memory.rs
elude_core/src/: lib.rs  memory.rs  simple_memory.rs
elude_legacy/: Cargo.toml
elude_legacy/benches/: legacy.rs
elude_legacy/examples/: poc_bridge_policy.rs  poc_cluster_granularity.rs
elude_legacy/src/: error.rs  job.rs  lib.rs  old.rs
elude_legacy/src/experiment/: mod.rs
elude_legacy/src/experiment_01/: DESIGN.md  README.md  model.rs
elude_legacy/src/experiment_02/: mod.rs  model.rs
elude_legacy/src/experiment_03/: mod.rs
elude_legacy/src/experiment_04/: README.md  mod.rs  model.rs
elude_legacy/src/experiment_05/: model.rs
elude_legacy/src/tasks/: 01-benchmark-foundation.md  05-bevy-ecs.md  05-dag-exec.md  05-flecs.md  06-experiment-04.md  08-experiment-05.md
elude_legacy/tests/: legacy.rs
elude_legacy/tests/legacy/: experiment_01.rs  experiment_02.rs  experiment_03.rs  experiment_04.rs  experiment_05.rs
elude_legacy/tests/legacy/support/: mod.rs
elude_macro/: Cargo.toml
examples/: poc_cluster_kernel.rs  poc_fixed_pool_clusters.rs
src/: depend.rs  error.rs  graph.rs  job.rs  lib.rs  main.rs  multex.rs  utility.rs  work.rs
src/experiment_01/: DESIGN.md  README.md  mod.rs  model.rs
src/experiment_02/: DESIGN.md  README.md  model.rs
src/experiment_03/: DESIGN.md  README.md  model.rs
src/experiment_04/: DESIGN.md
src/experiment_05/: mod.rs  model.rs
src/legacy/: depend.rs  error.rs  graph.rs  job.rs  mod.rs  utility.rs  work.rs
src/legacy/experiment/: README.md  mod.rs
src/legacy/experiment_01/: mod.rs  model.rs
src/legacy/experiment_02/: DESIGN.md  mod.rs  model.rs
src/legacy/experiment_03/: DESIGN.md  README.md  mod.rs  model.rs
src/legacy/experiment_04/: mod.rs  model.rs
src/legacy/experiment_05/: DESIGN.md  README.md  mod.rs  model.rs
src/legacy/tasks/: 03-experiment-02.md  05-dagga.md  05-external-libraries.md  07-results-summary.md  README.md
task/: 00-current-state.md  01-benchmark-foundation.md  02-experiment-01.md  03-experiment-02.md  04-experiment-03.md  05-external-libraries.md  05-legion.md  05-shipyard.md  06-experiment-04.md  07-validation-and-results.md  08-experiment-05.md  README.md
tests/: experiment_01.rs  experiment_02.rs  experiment_03.rs  experiment_04.rs  experiment_05.rs  worker.rs
tests/legacy/: experiment_01.rs  experiment_02.rs  experiment_03.rs  experiment_04.rs  experiment_05.rs
tests/legacy/support/: mod.rs
tests/support/: mod.rs
