[workspace]
resolver = "2"
members = [
    "elude_core",
    "elude_legacy",
    "elude_macro",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/magicolo/elude"
description = ""

[package]
name = "elude"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
elude_core = { path = "elude_core" }
elude_macro = { path = "elude_macro" }
