[package]
name = "elude_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
parking_lot.workspace = true
triomphe.workspace = true
arc-swap.workspace = true
bumpalo.workspace = true
page_size.workspace = true
