[package]
name = "elude_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]

parking_lot.workspace = true
triomphe.workspace = true
arc-swap.workspace = true
bumpalo.workspace = true
page_size.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "memory"
path = "benches/memory.rs"
harness = false

[[bench]]
name = "comparison"
path = "benches/comparison.rs"
harness = false
